--- a/lab/lab2/index.html
+++ b/lab/lab2/index.html
@@ -31,7 +31,30 @@
     <!-- Map -->
     <div id="map" class="map"></div>
     <!-- Legend -->
-    <div class="legend"></div>
+    <div class="legend">
+      <h3 >Legend</h3>
+      <div>
+       <div class="label" style='background:#f6b834;'></div>
+        <label>Monday</label>
+      </div>
+      <div>
+         <div class="label" style='background:#d7d187;'></div>
+         <label>Tuesday</label>
+       </div>
+       <div>
+         <div class="label" style='background:#82bcfc;'></div>
+         <label>Wednesday</label>
+       </div>
+       <div>
+         <div class="label" style='background:#fffcb4;'></div>
+         <label>Thursday</label>
+       </div>
+       <div>
+         <div class="label" style='background:#f45c20;'></div>
+         <label>Friday</label>
+      </div>
+    </div>
+
     <!-- Javascript Imports -->
     <script src="js/jquery-2.2.0.js"></script>
     <script src="js/underscore.js"></script>
