Midterm_Jia Wei

--- a/midterm project with pictures/basicApplication.html
+++ b/midterm project with pictures/basicApplication.html
@@ -25,6 +25,8 @@
      Type of Crime</span>. Some text here </p>
    </div>
 
+   <img scr="crime overview" id="slideshow" />
+
     <!-- Map -->
     <div id="map" style="position: absolute; right: 0; left: 400px; top: 0; bottom: 0;"></div>
 
